infra/config/traefik/traefik-dashboard-mw.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-ipwhitelist
  namespace: traefik-system
spec:
  ipAllowList:
    sourceRange:
      - "192.168.0.0/16"
